# back_NotariDapp

./: README.md  hardhat.config.js  package-lock.json  package.json  pyproject.toml
contracts/: NotariDapp.sol
scripts/: deploy.js
