[tool.poetry]
name = "back-notaridapp"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"
packages = [{include = "back_notaridapp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
